<?xml version="1.0"?>
<package>
  <name>sr_public_library</name>
  <version>0.0.0</version>
  <description>The sr_public_library package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>